<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <Spinner
        android:id="@+id/spn_filter_prices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_spinner"
        android:entries="@array/prices"
        app:layout_constraintEnd_toEndOf="@+id/tv_filter_brand"
        app:layout_constraintStart_toStartOf="@+id/tv_filter_brand"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_price" />

    <Spinner
        android:id="@+id/spn_filter_sizes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_spinner"
        android:entries="@array/sizes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_filter_brand"
        app:layout_constraintStart_toStartOf="@+id/tv_filter_brand"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_size" />

    <TextView
        android:id="@+id/tv_filter_brand"
        style="@style/FilterItemsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/filter_option_brand"
        app:layout_constraintEnd_toEndOf="@+id/btn_filter_accept"
        app:layout_constraintStart_toStartOf="@+id/btn_filter_close"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_title" />

    <TextView
        android:id="@+id/tv_filter_size"
        style="@style/FilterItemsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/filter_option_size"
        app:layout_constraintEnd_toEndOf="@+id/tv_filter_brand"
        app:layout_constraintStart_toStartOf="@+id/tv_filter_brand"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter_prices" />

    <TextView
        android:id="@+id/tv_filter_title"
        style="@style/FilterItemsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/filter_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_filter_accept"
        style="@style/ButtonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:text="@string/btn_text_done"
        app:layout_constraintBottom_toBottomOf="@+id/tv_filter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_filter_title"
        app:layout_constraintTop_toTopOf="@+id/tv_filter_title" />

    <ImageButton
        android:id="@+id/btn_filter_close"
        style="@style/ButtonSmall"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/text_color"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="@+id/tv_filter_title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tv_filter_title"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_filter_title"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/tv_filter_price"
        style="@style/FilterItemsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/filter_option_price"
        app:layout_constraintEnd_toEndOf="@+id/tv_filter_brand"
        app:layout_constraintStart_toStartOf="@+id/tv_filter_brand"
        app:layout_constraintTop_toBottomOf="@+id/spn_filter_brands" />

    <Spinner
        android:id="@+id/spn_filter_brands"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_spinner"
        android:entries="@array/brands"
        app:layout_constraintEnd_toEndOf="@+id/tv_filter_brand"
        app:layout_constraintStart_toStartOf="@+id/tv_filter_brand"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_brand" />
</androidx.constraintlayout.widget.ConstraintLayout>
