<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.MainScreenFragment">


        <Button
            android:id="@+id/btn_main_screen_view_see_more_best_seller"
            style="@style/TextButtonMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/btn_text_main_screen_see_more"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_screen_best_seller"
            app:layout_constraintEnd_toEndOf="@+id/btn_main_screen_view_all_categories"
            app:layout_constraintStart_toEndOf="@+id/tv_main_screen_best_seller"
            app:layout_constraintTop_toTopOf="@+id/tv_main_screen_best_seller" />

        <TextView
            android:id="@+id/tv_main_screen_best_seller"
            style="@style/TitleTextMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_main_screen_best_seller"
            app:layout_constraintEnd_toStartOf="@+id/btn_main_screen_view_see_more_best_seller"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/tv_main_screen_select_category"
            app:layout_constraintTop_toBottomOf="@+id/rv_hot_sales" />

        <Button
            android:id="@+id/btn_main_screen_view_see_more_hot_sales"
            style="@style/TextButtonMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/btn_text_main_screen_see_more"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_screen_hot_sales"
            app:layout_constraintEnd_toEndOf="@+id/btn_main_screen_view_all_categories"
            app:layout_constraintStart_toEndOf="@+id/tv_main_screen_hot_sales"
            app:layout_constraintTop_toTopOf="@+id/tv_main_screen_hot_sales" />

        <TextView
            android:id="@+id/tv_main_screen_hot_sales"
            style="@style/TitleTextMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_main_screen_hot_sales"
            app:layout_constraintEnd_toStartOf="@+id/btn_main_screen_view_see_more_hot_sales"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/tv_main_screen_select_category"
            app:layout_constraintTop_toBottomOf="@+id/sv_search" />

        <TextView
            android:id="@+id/tv_main_screen_select_category"
            style="@style/TitleTextMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:text="@string/title_main_screen_select_category"
            app:layout_constraintEnd_toStartOf="@+id/btn_main_screen_view_all_categories"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_main_screen_view_all_categories"
            style="@style/TextButtonMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="30dp"
            android:text="@string/btn_text_main_screen_view_all"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_screen_select_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_main_screen_select_category"
            app:layout_constraintTop_toTopOf="@+id/tv_main_screen_select_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_screen_select_category" />

        <SearchView
            android:id="@+id/sv_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_search"
            android:elevation="7dp"
            android:iconifiedByDefault="false"
            android:queryBackground="@drawable/background_search"
            android:queryHint="@string/hint_search"
            app:layout_constraintEnd_toStartOf="@+id/include_qr_code_button"
            app:layout_constraintHeight_min="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_categories" />

        <include
            android:id="@+id/include_qr_code_button"
            layout="@layout/qr_code_button_background"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="37dp"
            app:layout_constraintBottom_toBottomOf="@+id/sv_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sv_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hot_sales"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_main_screen_view_see_more_hot_sales"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="@+id/tv_main_screen_hot_sales"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_screen_hot_sales" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_best_seller"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_main_screen_view_see_more_best_seller"
            app:layout_constraintHeight_percent="0.55"
            app:layout_constraintStart_toStartOf="@+id/tv_main_screen_best_seller"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_screen_best_seller" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>