<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MyCartFragment">

    <ImageButton
        android:id="@+id/img_btn_cart_back"
        style="@style/ButtonSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/text_color"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_cart_add_address"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/img_btn_cart_add_address"
        style="@style/ButtonSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/background_color"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/img_btn_cart_back"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_btn_cart_back"
        app:layout_constraintTop_toTopOf="@+id/img_btn_cart_back"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_cart_add_address"
        style="@style/CartTextNearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_text_add_to_cart"
        app:layout_constraintBottom_toBottomOf="@+id/img_btn_cart_add_address"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_cart_add_address"
        app:layout_constraintTop_toTopOf="@+id/img_btn_cart_add_address" />

    <TextView
        android:id="@+id/tv_cart_title"
        style="@style/CartTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_title"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/img_btn_cart_back"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_cart_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        style="@style/RoundedBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <View
            android:id="@+id/view_cart_divider_upper"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_cart_cart_position_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_cart_delivery_cost"
            style="@style/CartCostPositionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cart_cart_position_delivery"
            app:layout_constraintStart_toStartOf="@+id/tv_cart_total_cost"
            app:layout_constraintTop_toTopOf="@+id/tv_cart_cart_position_delivery"
            tools:text="Free" />

        <TextView
            android:id="@+id/tv_cart_cart_position_total"
            style="@style/CartCostPositionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cart_cost_position_total"
            app:layout_constraintBottom_toTopOf="@+id/tv_cart_cart_position_delivery"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/btn_cart_accept" />

        <View
            android:id="@+id/view_cart_divider_lower"
            style="@style/Divider"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cart_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_cart_accept"
            style="@style/ButtonLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/btn_text_checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/tv_cart_cart_position_delivery"
            style="@style/CartCostPositionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:text="@string/cart_cost_position_delivery"
            app:layout_constraintBottom_toTopOf="@+id/view_cart_divider_lower"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/tv_cart_cart_position_total" />

        <TextView
            android:id="@+id/tv_cart_total_cost"
            style="@style/CartCostPositionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cart_cart_position_total"
            app:layout_constraintEnd_toEndOf="@+id/btn_cart_accept"
            app:layout_constraintTop_toTopOf="@+id/tv_cart_cart_position_total"
            tools:text="$6,000 us" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_products_in_cart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toTopOf="@+id/view_cart_divider_upper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>